ci: Workflow Bot -- Update ALL Dependencies

--- a/integration-tests/snapshots/php/php-src/report.yaml
+++ b/integration-tests/snapshots/php/php-src/report.yaml
@@ -21,29 +21,29 @@ issues:
   - "build/gen_stub.php:1256:30	methodsynopsis	U	$synopsisType = \"methodsynopsis\";"
   - "build/gen_stub.php:1285:10	methodname	U	$methodname = $doc->createElement"
   - "build/gen_stub.php:1295:18	methodparam	U	$methodparam = $doc->createElement"
-  - "build/gen_stub.php:1443:86	malloc	U	propertyName}_type_list = malloc(ZEND_TYPE_LIST_SIZE"
-  - "build/gen_stub.php:1509:10	fieldsynopsis	U	$fieldsynopsisElement = $doc->createElement"
-  - "build/gen_stub.php:1536:10	varname	U	$varnameElement = $doc->createElement"
-  - "build/gen_stub.php:1537:40	linkend	U	varnameElement->setAttribute(\"linkend\", \"$className.props"
-  - "build/gen_stub.php:1591:45	cstr	U	tzend_enum_add_case_cstr(class_entry, \\\"$escapedName"
-  - "build/gen_stub.php:1794:47	classsynopsis	U	doc->createElement(\"classsynopsis\");"
-  - "build/gen_stub.php:1804:51	classsynopsisinfo	U	doc->createElement(\"classsynopsisinfo\");"
-  - "build/gen_stub.php:1882:62	xpointer	U	docbook.org/ns/docbook) xpointer(id('class.$parentClassName"
-  - "build/gen_stub.php:1882:103	partintro	U	parentClassName')/db:partintro/db:section/db:classsynopsis"
-  - "build/gen_stub.php:1900:97	refentry	U	class.$className')/db:refentry/db:refsect1[@role='descriptio"
-  - "build/gen_stub.php:1900:109	refsect	U	className')/db:refentry/db:refsect1[@role='description"
-  - "build/gen_stub.php:2461:47	conds	U	reprocessorConditions(array &$conds, Stmt $stmt): ?string"
-  - "build/gen_stub.php:2466:38	ifdef	U	if (preg_match('/^#\\s*ifdef\\s+(.+)$/', $text, $matches"
-  - "build/gen_stub.php:2468:38	ifndef	U	if (preg_match('/^#\\s*ifndef\\s+(.+)$/', $text, $matches"
-  - "build/gen_stub.php:2489:35	stmts	U	getFileDocComment(array $stmts): ?DocComment {"
-  - "build/gen_stub.php:2952:34	Xmls	U	if (replaceAndCompareXmls($doc, $classSynopsis"
-  - "build/gen_stub.php:2963:24	phpdoc	U	\"/<phpdoc:(classref|exceptionref"
-  - "build/gen_stub.php:2963:32	classref	U	\"/<phpdoc:(classref|exceptionref)\\s+xmlns"
-  - "build/gen_stub.php:2963:41	exceptionref	U	\"/<phpdoc:(classref|exceptionref)\\s+xmlns:phpdoc=\\\"("
-  - "build/gen_stub.php:3219:23	xvzf	U	passthru(\"tar xvzf $tarName -C PHP-Parser"
-  - "build/gen_stub.php:3256:2	optind	U	$optind = null;"
-  - "build/gen_stub.php:3260:78	classsynopses	U	\"verify\", \"generate-classsynopses\", \"replace-classsynopses"
-  - "build/gen_stub.php:3261:19	methodsynopses	U	\"generate-methodsynopses\", \"replace-methodsynopses"
+  - "build/gen_stub.php:1453:86	malloc	U	propertyName}_type_list = malloc(ZEND_TYPE_LIST_SIZE"
+  - "build/gen_stub.php:1519:10	fieldsynopsis	U	$fieldsynopsisElement = $doc->createElement"
+  - "build/gen_stub.php:1544:10	varname	U	$varnameElement = $doc->createElement"
+  - "build/gen_stub.php:1545:40	linkend	U	varnameElement->setAttribute(\"linkend\", \"$className.props"
+  - "build/gen_stub.php:1611:45	cstr	U	tzend_enum_add_case_cstr(class_entry, \\\"$escapedName"
+  - "build/gen_stub.php:1814:47	classsynopsis	U	doc->createElement(\"classsynopsis\");"
+  - "build/gen_stub.php:1824:51	classsynopsisinfo	U	doc->createElement(\"classsynopsisinfo\");"
+  - "build/gen_stub.php:1903:62	xpointer	U	docbook.org/ns/docbook) xpointer(id('$parentReference"
+  - "build/gen_stub.php:1903:97	partintro	U	parentReference')/db:partintro/db:section/db:classsynopsis"
+  - "build/gen_stub.php:1921:96	refentry	U	classReference')/db:refentry/db:refsect1[@role='descriptio"
+  - "build/gen_stub.php:1921:108	refsect	U	assReference')/db:refentry/db:refsect1[@role='description"
+  - "build/gen_stub.php:2487:47	conds	U	reprocessorConditions(array &$conds, Stmt $stmt): ?string"
+  - "build/gen_stub.php:2492:38	ifdef	U	if (preg_match('/^#\\s*ifdef\\s+(.+)$/', $text, $matches"
+  - "build/gen_stub.php:2494:38	ifndef	U	if (preg_match('/^#\\s*ifndef\\s+(.+)$/', $text, $matches"
+  - "build/gen_stub.php:2515:35	stmts	U	getFileDocComment(array $stmts): ?DocComment {"
+  - "build/gen_stub.php:2978:34	Xmls	U	if (replaceAndCompareXmls($doc, $classSynopsis"
+  - "build/gen_stub.php:2989:24	phpdoc	U	\"/<phpdoc:(classref|exceptionref"
+  - "build/gen_stub.php:2989:32	classref	U	\"/<phpdoc:(classref|exceptionref)\\s+xmlns"
+  - "build/gen_stub.php:2989:41	exceptionref	U	\"/<phpdoc:(classref|exceptionref)\\s+xmlns:phpdoc=\\\"("
+  - "build/gen_stub.php:3245:23	xvzf	U	passthru(\"tar xvzf $tarName -C PHP-Parser"
+  - "build/gen_stub.php:3282:2	optind	U	$optind = null;"
+  - "build/gen_stub.php:3286:78	classsynopses	U	\"verify\", \"generate-classsynopses\", \"replace-classsynopses"
+  - "build/gen_stub.php:3287:19	methodsynopses	U	\"generate-methodsynopses\", \"replace-methodsynopses"
   - "CODING_STANDARDS.md:20:8	efree	U	`efree()`"
   - "CODING_STANDARDS.md:40:22	strlen	U	calculated with `strlen()`. Write your functions"
   - "CODING_STANDARDS.md:44:64	addslashes	U	strlen()` (e.g. `php_addslashes()`)."
@@ -1413,7 +1413,7 @@ issues:
   - "ext/intl/breakiterator/breakiterator_iterators.h:36:3	CFUNC	U	U_CFUNC zend_object_iterator"
   - "ext/intl/calendar/calendar_class.h:36:12	ucal	U	Calendar* ucal;"
   - "ext/intl/calendar/calendar.stub.php:12:15	intlcal	U	* @alias intlcal_create_instance"
-  - "ext/intl/calendar/calendar.stub.php:296:15	intlgregcal	U	* @alias intlgregcal_set_gregorian_change"
+  - "ext/intl/calendar/calendar.stub.php:297:15	intlgregcal	U	* @alias intlgregcal_set_gregorian_change"
   - "ext/intl/collator/collator_attr.c:43:10	ucol	U	value = ucol_getAttribute( co->ucoll"
   - "ext/intl/collator/collator_attr.c:43:33	ucoll	U	ucol_getAttribute( co->ucoll, attribute, COLLATOR"
   - "ext/intl/collator/collator_class.c:103:17	allocted	U	* Clean up mem allocted by internals of Collator"
@@ -1746,8 +1746,8 @@ issues:
   - "ext/mbstring/mbstring.c:2273:25	swidth	U	zend_long from, width, swidth = 0;"
   - "ext/mbstring/mbstring.c:2420:22	chash	U	HashTable *output, *chash;"
   - "ext/mbstring/mbstring.c:2424:9	ckey	U	size_t ckey_len, cval_len;"
-  - "ext/mbstring/mbstring.c:3709:13	ASCIIZ	U	#undef MAIL_ASCIIZ_CHECK_MBSTRING"
-  - "ext/mbstring/mbstring.c:4260:10	bcnt	U	size_t bcnt = nbytes;"
+  - "ext/mbstring/mbstring.c:3704:13	ASCIIZ	U	#undef MAIL_ASCIIZ_CHECK_MBSTRING"
+  - "ext/mbstring/mbstring.c:4255:10	bcnt	U	size_t bcnt = nbytes;"
   - "ext/mbstring/mbstring.stub.php:139:13	MBREGEX	U	#ifdef HAVE_MBREGEX"
   - "ext/mbstring/php_mbregex.c:63:9	MBREX	U	#define MBREX(g) (MBSTRG(mb_regex"
   - "ext/mbstring/php_mbregex.c:192:29	UJIS	U	JP\\0EUCJP\\0X-EUC-JP\\0UJIS\\0EUCJP\\0EUCJP-WIN\\0"
@@ -2243,8 +2243,8 @@ issues:
   - "ext/opcache/jit/zend_jit_gdb.c:310:11	framep	U	uint8_t *framep = p;"
   - "ext/opcache/jit/zend_jit_gdb.c:404:9	DLNE	U	#define DLNE(op, s) (DB(DW_LNS_extended"
   - "ext/opcache/jit/zend_jit_gdb.c:451:28	initf	U	typedef void (*zend_gdbjit_initf) (zend_gdbjit_ctx *ctx"
-  - "ext/opcache/jit/zend_jit_helpers.c:1572:38	unmangled	U	ce->name), zend_get_unmangled_property_name(prop-"
-  - "ext/opcache/jit/zend_jit_helpers.c:1653:26	ISERROR	U	else if (UNEXPECTED(Z_ISERROR_P(retval))) {"
+  - "ext/opcache/jit/zend_jit_helpers.c:1578:38	unmangled	U	ce->name), zend_get_unmangled_property_name(prop-"
+  - "ext/opcache/jit/zend_jit_helpers.c:1659:26	ISERROR	U	else if (UNEXPECTED(Z_ISERROR_P(retval))) {"
   - "ext/opcache/jit/zend_jit_internal.h:74:55	ctzll	U	(zend_reg)__builtin_ctzll(set))"
   - "ext/opcache/jit/zend_jit_internal.h:75:56	clzll	U	zend_reg)(__builtin_clzll(set)^63))"
   - "ext/opcache/jit/zend_jit_internal.h:348:32	prcessed	U	DONE, \"already prcessed\") \\"
@@ -2262,22 +2262,22 @@ issues:
   - "ext/opcache/jit/zend_jit_trace.c:935:16	TSSA	U	// TODO: TSSA may miss Pi() functions"
   - "ext/opcache/jit/zend_jit_trace.c:3298:28	clenup	U	void zend_jit_trace_clenup_stack(zend_jit_trace"
   - "ext/opcache/jit/zend_jit_trace.c:3991:7	Deoptimization	U	/* Deoptimization */"
-  - "ext/opcache/jit/zend_jit_trace.c:4257:66	FCARG	U	REG(op2_addr) != ZREG_FCARG1)"
-  - "ext/opcache/jit/zend_jit_trace.c:6495:43	lbinterrupt	U	addr = dasm_labels[zend_lbinterrupt_handler];"
-  - "ext/opcache/jit/zend_jit_trace.c:6654:27	lbtrace	U	return dasm_labels[zend_lbtrace_escape];"
-  - "ext/opcache/jit/zend_jit_trace.c:6935:30	sobject	U	fprintf(stderr, \" op1(%sobject of class %s)\", ref,"
-  - "ext/opcache/jit/zend_jit_trace.c:7619:5	Deoptimizatoion	U	/* Deoptimizatoion of VM stack state *"
-  - "ext/opcache/jit/zend_jit_trace.c:7871:29	xlat	U	shared_alloc_register_xlat_entry(op_array->opcodes"
+  - "ext/opcache/jit/zend_jit_trace.c:4258:66	FCARG	U	REG(op2_addr) != ZREG_FCARG1)"
+  - "ext/opcache/jit/zend_jit_trace.c:6504:43	lbinterrupt	U	addr = dasm_labels[zend_lbinterrupt_handler];"
+  - "ext/opcache/jit/zend_jit_trace.c:6663:27	lbtrace	U	return dasm_labels[zend_lbtrace_escape];"
+  - "ext/opcache/jit/zend_jit_trace.c:6944:30	sobject	U	fprintf(stderr, \" op1(%sobject of class %s)\", ref,"
+  - "ext/opcache/jit/zend_jit_trace.c:7628:5	Deoptimizatoion	U	/* Deoptimizatoion of VM stack state *"
+  - "ext/opcache/jit/zend_jit_trace.c:7883:29	xlat	U	shared_alloc_register_xlat_entry(op_array->opcodes"
   - "ext/opcache/jit/zend_jit_vm_helpers.c:40:35	Wvolatile	U	diagnostic ignored \"-Wvolatile-register-var\""
-  - "ext/opcache/jit/zend_jit_vm_helpers.c:1075:39	unroling	U	doesn't work try loop unroling. */"
+  - "ext/opcache/jit/zend_jit_vm_helpers.c:1116:39	unroling	U	doesn't work try loop unroling. */"
   - "ext/opcache/jit/zend_jit_vtune.c:21:14	VTUNE	U	#define HAVE_VTUNE 1"
   - "ext/opcache/jit/zend_jit_vtune.c:26:22	vtune	U	static void zend_jit_vtune_register(const char"
   - "ext/opcache/jit/zend_jit.c:154:17	idom	U	b = blocks[b].idom;"
   - "ext/opcache/jit/zend_jit.c:752:37	Wtautological	U	diagnostic ignored \"-Wtautological-compare\""
   - "ext/opcache/jit/zend_jit.c:1322:17	sccs	U	zend_ssa_find_sccs(op_array, ssa);"
   - "ext/opcache/jit/zend_jit.c:1673:65	Wimmer	U	SSA Form\", Christian Wimmer and"
-  - "ext/opcache/jit/zend_jit.c:4642:51	lbhybrid	U	handler = dasm_labels[zend_lbhybrid_runtime_jit];"
-  - "ext/opcache/jit/zend_jit.c:5118:7	ZCSG	U	if (ZCSG(preload_script)) {"
+  - "ext/opcache/jit/zend_jit.c:4652:51	lbhybrid	U	handler = dasm_labels[zend_lbhybrid_runtime_jit];"
+  - "ext/opcache/jit/zend_jit.c:5128:7	ZCSG	U	if (ZCSG(preload_script)) {"
   - "ext/opcache/jit/zend_jit.h:41:73	caled	U	the most frequently caled on first request functions"
   - "ext/opcache/jit/zend_jit.h:78:61	debbuger	U	x1f0 /* profile and debbuger flags can't be changed"
   - "ext/opcache/shared_alloc_mmap.c:52:48	vmmap	U	segments via tools such as vmmap */"
