--- a/integration-tests/snapshots/microsoft/TypeScript-Website/report.yaml
+++ b/integration-tests/snapshots/microsoft/TypeScript-Website/report.yaml
@@ -5,7 +5,7 @@ Args: ["--config=${repoConfig}/cspell.json","**/*.*"]
 Summary:
   files: 704
   filesWithIssues: 150
-  issues: 571
+  issues: 573
   errors: 0
 Errors: []
 
@@ -143,6 +143,7 @@ issues:
   - "packages/tsconfig-reference/scripts/msbuild/Microsoft.TypeScript.targets:198:25	Cordova	U	<!-- Workaround for Cordova projects which still"
   - "packages/tsconfig-reference/scripts/tsconfig/generateMarkdown.ts:102:75	failable	U	ionalExampleContent?: string, failable = false) => {"
   - "packages/tsconfig-reference/scripts/types.ts:30:11	Compatability	U	elidedInCompatabilityPyramid?: boolean;"
+  - "packages/typescript-vfs/src/index.ts:159:17	weakref	U	\"lib.es2021.weakref.d.ts\","
   - "packages/typescript-vfs/test/fsbacked.test.ts:26:53	Compone	U	from \"react\"\\nReact.Compone`"
   - "packages/typescriptlang-org/gatsby-browser.js:13:54	kyel	U	clarity\", \"script\", \"3w5kyel345\");"
   - "packages/typescriptlang-org/gatsby-browser.js:30:39	aisdk	U	window[sdkInstance], aisdk = window[aiName] ||"
