--- a/.github/workflows/integration-test.yml
+++ b/.github/workflows/integration-test.yml
@@ -67,7 +67,8 @@ jobs:
           - wireapp/wire-webapp
 
     steps:
-      - uses: actions/checkout@v2.3.4
+      - name: Checkout
+        uses: actions/checkout@v2.3.4
 
       - name: Use Node.js ${{ matrix.node-version }}
         uses: actions/setup-node@v2.4.0
@@ -79,20 +80,25 @@ jobs:
             packages/*/package-lock.json
             integration-tests/package-lock.json
 
-      - name: "Use Update Args"
+      - name: Show Update Args
         if: ${{ env.update_args }}
         run: |
           echo Update Snapshots - ${{ github.event.inputs.updateSnapshots }}
           echo Update Args - ${{ env.update_args }}
           echo ${{ env.branch_prefix }}/${{ matrix.repo }}
 
-      - run: npm ci
-      - name: Npm has failed
+      - name: Npm CI
+        run: npm ci
+
+      - name: Has Npm has failed?
         if: ${{ failure() }}
         run: |
           ls -alF /home/runner/.npm/_logs/*.log
           cat /home/runner/.npm/_logs/*.log
-      - run: npm run build
+
+      - name: Build
+        run: npm run build
+
       - name: Run Integration Tests ${{ matrix.repo }}
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
@@ -103,23 +109,28 @@ jobs:
 
       # Update if necessary
 
-      - name: Has changes
+      - name: Detect Changes
         run: |
           git --no-pager diff --compact-summary  --exit-code && echo "git_status=clean" >> $GITHUB_ENV || echo "git_status=dirty" >> $GITHUB_ENV
           git --no-pager diff --compact-summary
+
       - name: Gen Body
         run: |
           echo 'git_body<<DIFF' >> $GITHUB_ENV
           git --no-pager diff --compact-summary >> $GITHUB_ENV
           echo 'DIFF' >> $GITHUB_ENV
+
       - name: Echo git_status
         run: echo ${{ env.git_status }}
-      - uses: tibdex/github-app-token@v1.4 # cspell:ignore tibdex
+
+      - name: Generate Token
+        uses: tibdex/github-app-token@v1.4 # cspell:ignore tibdex
         if: env.git_status == 'dirty'
         id: generate-token
         with:
           app_id: ${{ secrets.AUTOMATION_APP_ID }}
           private_key: ${{ secrets.AUTOMATION_PRIVATE_KEY }}
+
       - name: Create Pull Request
         if: env.git_status == 'dirty'
         uses: peter-evans/create-pull-request@v3.10.1
