--- a/.github/workflows/integration-test.yml
+++ b/.github/workflows/integration-test.yml
@@ -35,34 +35,34 @@ jobs:
           - ubuntu-latest
 
         repo:
-          # - AdaDoom3/AdaDoom3
-          # - alexiosc/megistos
-          # - aws-amplify/docs
-          # - Azure/azure-rest-api-specs
-          # - bitjson/typescript-starter
-          # - canada-ca/open-source-logiciel-libre
-          # - django/django
-          # - exonum/exonum
-          # - googleapis/google-cloud-cpp
+          - AdaDoom3/AdaDoom3
+          - alexiosc/megistos
+          - aws-amplify/docs
+          - Azure/azure-rest-api-specs
+          - bitjson/typescript-starter
+          - canada-ca/open-source-logiciel-libre
+          - django/django
+          - exonum/exonum
+          - googleapis/google-cloud-cpp
           - graphql/express-graphql
           - graphql/graphql-js
           - graphql/graphql-relay-js
           - graphql/graphql-spec
-          # - liriliri/licia
-          # - MartinThoma/LaTeX-examples
-          # - microsoft/TypeScript-Website
-          # - php/php-src
-          # - plasticrake/tplink-smarthome-api
-          # - prettier/prettier
-          # - pycontribs/jira
-          # - SoftwareBrothers/admin-bro
-          # - TheAlgorithms/Python
-          # - typescript-cheatsheets/react
-          # - typescript-eslint/typescript-eslint
-          # - w3c/aria-practices
-          # - w3c/specberus
-          # - webdeveric/webpack-assets-manifest
-          # - webpack/webpack
+          - liriliri/licia
+          - MartinThoma/LaTeX-examples
+          - microsoft/TypeScript-Website
+          - php/php-src
+          - plasticrake/tplink-smarthome-api
+          - prettier/prettier
+          - pycontribs/jira
+          - SoftwareBrothers/admin-bro
+          - TheAlgorithms/Python
+          - typescript-cheatsheets/react
+          - typescript-eslint/typescript-eslint
+          - w3c/aria-practices
+          - w3c/specberus
+          - webdeveric/webpack-assets-manifest
+          - webpack/webpack
           - wireapp/wire-desktop
           - wireapp/wire-webapp
 
