add --cache option

--- a/.gitignore
+++ b/.gitignore
@@ -97,4 +97,7 @@ typings/
 
 .tsbuildinfo
 
-# cspell:ignore pids jscoverage wscript jspm dotenv eslintcache
+# cspell cache
+.cspellcache
+
+# cspell:ignore pids jscoverage wscript jspm dotenv eslintcache cspellcache
