--- a/packages/cspell/package.json
+++ b/packages/cspell/package.json
@@ -69,14 +69,19 @@
   },
   "homepage": "https://streetsidesoftware.github.io/cspell/",
   "dependencies": {
+    "@types/file-entry-cache": "^5.0.2",
+    "@types/imurmurhash": "^0.1.1",
     "chalk": "^4.1.2",
     "commander": "^8.2.0",
     "comment-json": "^4.1.1",
     "cspell-glob": "^5.10.0",
     "cspell-lib": "^5.10.1",
+    "fast-json-stable-stringify": "^2.1.0",
+    "file-entry-cache": "^6.0.1",
     "fs-extra": "^10.0.0",
     "get-stdin": "^8.0.0",
     "glob": "^7.2.0",
+    "imurmurhash": "^0.1.4",
     "strip-ansi": "^6.0.1",
     "vscode-uri": "^3.0.2"
   },
