--- a/.github/workflows/integration-test.yml
+++ b/.github/workflows/integration-test.yml
@@ -84,12 +84,13 @@ jobs:
         id: step-repo-info
         run: |
           echo "::set-output name=repo-info::$(jq -c '.repositories[] | select(.path == "${{ matrix.repo }}")' integration-tests/config/config.json)"
+          echo "::set-output name=repo-hash::${{ hashFiles('integration-tests/tsconfig.json', 'integration-tests/config/repositories/${{matrix.repo}}/**', 'integration-tests/snapshots/${{ matrix.repo }}/*', 'integration-tests/repositories/*', '**/package-lock.json', '**/src/**/*.ts', '**/tsconfig.json') }}"
 
       - name: Cache Integration Run
         id: step-cache-run
         uses: actions/cache@v2
         with:
-          key: int-repo-${{ hashFiles('integration-tests/tsconfig.json', 'integration-tests/config/repositories/${{matrix.repo}}/**', 'integration-tests/snapshots/${{ matrix.repo }}/*', 'integration-tests/repositories/*', '**/package-lock.json', '**/src/**/*.ts', '**/tsconfig.json') }}-${{ matrix.repo }}-${{ steps.step-repo-info.outputs.repo-info }}
+          key: int-repo-${{ steps.step-repo-info.outputs.repo-hash }}-${{ matrix.repo }}-${{ fromJSON(steps.step-repo-info.outputs.repo-info).commit }}
           path: |
             integration-tests/tsconfig.json
 
