--- a/.github/workflows/integration-test.yml
+++ b/.github/workflows/integration-test.yml
@@ -16,7 +16,7 @@ on:
     inputs:
       updateSnapshots:
         description: "Update Integration Test snapshots (y/n)"
-        default: "y"
+        default: "n"
 
 jobs:
   integration-tests:
@@ -80,11 +80,17 @@ jobs:
             packages/*/package-lock.json
             integration-tests/package-lock.json
 
+      - name: Repo Info
+        id: step-repo-info
+        run: |
+          echo "::set-output name=repo-info::$(jq -c '.repositories[] | select(.path == "${{ matrix.repo }}")' integration-tests/config/config.json)"
+          echo "::set-output name=repo-hash::${{ hashFiles('integration-tests/tsconfig.json', 'integration-tests/config/repositories/${{matrix.repo}}/**', 'integration-tests/snapshots/${{ matrix.repo }}/*', 'integration-tests/repositories/*', '**/package-lock.json', '**/src/**/*.ts', '**/tsconfig.json') }}"
+
       - name: Cache Integration Run
         id: step-cache-run
         uses: actions/cache@v2
         with:
-          key: int-repo-${{ hashFiles('integration-tests/tsconfig.json', 'integration-tests/config/**/*.json', 'integration-tests/snapshots/${{ matrix.repo }}/*', 'integration-tests/repository/*', '**/package-lock.json', '**/src/**/*.ts', '**/tsconfig.json') }}-${{ matrix.repo }}
+          key: int-repo-${{ steps.step-repo-info.outputs.repo-hash }}-${{ matrix.repo }}-${{ fromJSON(steps.step-repo-info.outputs.repo-info).commit }}
           path: |
             integration-tests/tsconfig.json
 
@@ -97,6 +103,11 @@ jobs:
             packages/*/dist
             integration-tests/dist
 
+      - name: Cached Results
+        run: |
+          echo Build Cache: ${{ steps.step-cache-build.outputs.cache-hit && 'Hit' || 'Miss' }}
+          echo Run Cache: ${{ steps.step-cache-run.outputs.cache-hit && 'Hit' || 'Miss' }}
+
       - name: Show Update Args
         if: ${{ env.update_args }}
         run: |
@@ -105,6 +116,7 @@ jobs:
           echo ${{ env.branch_prefix }}/${{ matrix.repo }}
 
       - name: Npm CI
+        if: ${{ !steps.step-cache-build.outputs.cache-hit || !steps.step-cache-run.outputs.cache-hit }}
         run: npm ci
 
       - name: Has Npm has failed?
@@ -112,11 +124,6 @@ jobs:
         run: |
           ls -alF /home/runner/.npm/_logs/*.log
           cat /home/runner/.npm/_logs/*.log
-
-      - name: Cached Results
-        run: |
-          echo Build Cache: ${{ steps.step-cache-build.outputs.cache-hit && 'Hit' || 'Miss' }}
-          echo Run Cache: ${{ steps.step-cache-run.outputs.cache-hit && 'Hit' || 'Miss' }}
 
       - name: Build
         if: ${{ !steps.step-cache-build.outputs.cache-hit }}
