--- a/.github/workflows/integration-test.yml
+++ b/.github/workflows/integration-test.yml
@@ -10,6 +10,7 @@ on:
       - "**/package.lock"
       - "**/*.ts"
       - "integration-tests/**"
+      - ".github/workflows/integration-test.yml"
       - "!docs/**"
   # Run on demand
   workflow_dispatch:
