ci: Try to speed up `npm install`

--- a/packages/cspell-dynamic-loader/package.json
+++ b/packages/cspell-dynamic-loader/package.json
@@ -17,8 +17,7 @@
     "build-dev": "tsc -p tsconfig.dev.json",
     "clean-build": "npm run clean && npm run build",
     "compile": "tsc -p .",
-    "test": "jest",
-    "prepare": "npm run build"
+    "test": "jest"
   },
   "repository": {
     "type": "git",
