ci: Workflow Bot -- Integration googleapis/google-cloud-cpp Update References

--- a/integration-tests/snapshots/googleapis/google-cloud-cpp/report.yaml
+++ b/integration-tests/snapshots/googleapis/google-cloud-cpp/report.yaml
@@ -5,7 +5,7 @@ Args: ["--config=${repoConfig}/cspell.json","**/*","-e","{*.BUILD,BUILD,CHANGELO
 Summary:
   files: 1881
   filesWithIssues: 1162
-  issues: 9185
+  issues: 9194
   errors: 0
 Errors: []
 
@@ -562,6 +562,7 @@ issues:
   - "google/cloud/storage/parallel_uploads_test.cc:1125:40   	blahblah	U   	ParseResumableSessionId(\"blahblah\"),"
   - "google/cloud/storage/policy_document_test.cc:158:8      	asdfasdfasdf	U   	\"asdfasdfasdf\", \"asdfasdfasdf\"};"
   - "google/cloud/storage/policy_document_test.cc:199:14     	rsaposttest 	U   	\"rsaposttest, access_id=foo@foo.com"
+  - "google/cloud/storage/quickstart/README.md:127:31    	Tbits   	U   	large workloads (several Tbits/s of upload and/or download"
   - "google/cloud/storage/README.md:83:29    	istreambuf  	U   	string contents{std::istreambuf_iterator<char>{reader"
   - "google/cloud/storage/storage_iam_policy_test.cc:28:33   	shoud   	U   	\"NativeExpression shoud be copy constructible"
   - "google/cloud/storage/testing/mock_fake_clock.h:30:33    	timepoints  	U   	the clock to arbitrary timepoints."
