add test-bin scripts

--- a/package.json
+++ b/package.json
@@ -36,9 +36,11 @@
     "symlink": "node build_tools/bin/symlink.js packages test-packages",
     "test-watch": "lerna run --parallel test-watch",
     "test": "lerna run test && npm run test-schema",
-    "test-bin": "npm run test-bin-spell && npm run test-bin-trace && npm run test-bin-check",
+    "test-bin": "npm run test-bin-spell && npm run test-bin-spell-cache-content && npm run test-bin-spell-cache-metadata && npm run test-bin-trace && npm run test-bin-check",
     "test-bin-check": "node ./bin.js check README.md",
     "test-bin-spell": "node ./bin.js -c cspellrc.json",
+    "test-bin-spell-cache-content": "node ./bin.js -c cspellrc.json --cache --cache-strategy content",
+    "test-bin-spell-cache-metadata": "node ./bin.js -c cspellrc.json --cache --cache-strategy metadata",
     "test-bin-trace": "node ./bin.js trace test",
     "test-integrations": "cd ./integration-tests && npm run integration-tests",
     "test-schema": "ajv -s ./cspell.schema.json -d cspell.json -c ./packages/cspell-types/ajv.config.js",
