--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -26,6 +26,13 @@ updates:
     schedule:
       interval: "daily"
 
+
+  - package-ecosystem: "bundler"
+    # The Gemfile used in for the Jekyll doc site
+    directory: "/docs"
+    schedule:
+      interval: "weekly"
+
   - package-ecosystem: "npm" # See documentation for possible values
     directory: "/" # Location of package manifests
     versioning-strategy: increase
